--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-176.7KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
   - {name: 🇺🇸 美国-4.51MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-12.83MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-8.14MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇭🇰 香港-2.83MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-3.47MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 以色列-657.5KB/s(Youtube:不良林), server: 83.229.73.60, port: 50003, type: ss, cipher: aes-256-cfb, password: !<str> 8460400130}
+  - {name: 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-176.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
       - 以色列-657.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-176.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
       - 以色列-657.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-176.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
       - 以色列-657.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-176.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
       - 以色列-657.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-176.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
       - 以色列-657.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-176.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
       - 以色列-657.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-176.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
       - 以色列-657.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
