--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,81 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.51MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 以色列-657.5KB/s(Youtube:不良林), server: 83.229.73.60, port: 50003, type: ss, cipher: aes-256-cfb, password: !<str> 8460400130}
-  - {name: 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-343.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇭🇰 香港-1.94MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 以色列-809.9KB/s(Youtube:不良林), server: 83.229.73.60, port: 50003, type: ss, cipher: aes-256-cfb, password: !<str> 8460400130}
+  - {name: 🇨🇳 台湾-833.0KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 以色列-657.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
+      - 以色列-809.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 以色列-657.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
+      - 以色列-809.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 以色列-657.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
+      - 以色列-809.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 以色列-657.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
+      - 以色列-809.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 以色列-657.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
+      - 以色列-809.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 以色列-657.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
+      - 以色列-809.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +95,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.51MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-450.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 以色列-657.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-318.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
+      - 以色列-809.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
