--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,48 +5,47 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-343.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇭🇰 香港-1.94MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 以色列-809.9KB/s(Youtube:不良林), server: 83.229.73.60, port: 50003, type: ss, cipher: aes-256-cfb, password: !<str> 8460400130}
+  - {name: 🇦🇺 澳大利亚-595.3KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 以色列-233.1KB/s(Youtube:不良林), server: 83.229.73.60, port: 50003, type: ss, cipher: aes-256-cfb, password: !<str> 8460400130}
   - {name: 🇨🇳 台湾-833.0KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇫🇷 法国-1.47MB/s(Youtube:不良林), server: 149.202.82.172, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
-      - 以色列-809.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-595.3KB/s(Youtube:不良林)
+      - 以色列-233.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
-      - 以色列-809.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-595.3KB/s(Youtube:不良林)
+      - 以色列-233.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
-      - 以色列-809.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-595.3KB/s(Youtube:不良林)
+      - 以色列-233.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -54,32 +53,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
-      - 以色列-809.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-595.3KB/s(Youtube:不良林)
+      - 以色列-233.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
-      - 以色列-809.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-595.3KB/s(Youtube:不良林)
+      - 以色列-233.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
-      - 以色列-809.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-595.3KB/s(Youtube:不良林)
+      - 以色列-233.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -95,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-662.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
-      - 以色列-809.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-595.3KB/s(Youtube:不良林)
+      - 以色列-233.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-833.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
