--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,9 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 以色列-233.1KB/s(Youtube:不良林), server: 83.229.73.60, port: 50003, type: ss, cipher: aes-256-cfb, password: !<str> 8460400130}
-  - {name: 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-313.9KB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-802.1KB/s(Youtube:不良林), server: 159.27.115.21, port: 64078, type: vmess, uuid: 477fb2a0-daf4-3041-b6f6-5de3f42ecc69, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.115.21}}
+  - {name: 🇨🇳 中国-2.49MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -17,20 +16,18 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 以色列-233.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-802.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 以色列-233.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-802.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -38,10 +35,9 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 以色列-233.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-802.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -53,20 +49,18 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 以色列-233.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-802.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 以色列-233.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-802.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -74,10 +68,9 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 以色列-233.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-802.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,10 +87,9 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 以色列-233.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-313.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-802.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
