--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-955.8KB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-211.1KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.00MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.51MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-767.7KB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.19MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇮🇹 意大利-1.25MB/s(Youtube:不良林), server: tj-us02.yiyodns.xyz, port: 443, type: trojan, password: 7dafe71e-2be6-302f-bdfc-e6319a3299bc, sni: tj-us02.yiyodns.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-767.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-767.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-767.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-767.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-767.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-767.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-767.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
