--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-954.4KB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.26MB/s(Youtube:不良林), server: 103.56.60.235, port: 3385, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-211.1KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-955.8KB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.38MB/s(Youtube:不良林), server: 103.56.60.235, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-461.5KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.57MB/s(Youtube:不良林), server: 103.56.62.145, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-804.1KB/s(Youtube:不良林), server: 103.56.62.145, port: 3385, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.14MB/s(Youtube:不良林), server: 103.56.62.145, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-955.9KB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-233.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-954.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-954.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-954.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-954.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-954.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-954.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-954.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-211.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-804.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
